EXTRA_DIST = \
 build_qla.pl \
 datatypes.pl \
 expressions_gamma.pl \
 expressions_scalar.pl \
 expressions_tensor.pl \
 formatting.pl headers.pl \
 indirection_all.pl \
 indirection.pl \
 indirection_qdp.pl \
 make_code_binary.pl \
 make_code_real_complex.pl \
 make_code_ternary.pl \
 make_code_unary.pl \
 operatortypes.pl \
 prototype.pl \
 variable_names.pl \
 make_virtualNc virtualNc.pl \
 code-templates
